Closer to finishing LA  section

--- a/util/math-setup.tex
+++ b/util/math-setup.tex
@@ -6,6 +6,7 @@
 % -----------------------------------------------------
 \newcommand{\mb}[1]{ \mathbf{#1} }
 \newcommand{\mc}[1]{ \mathcal{#1} }
+\newcommand{\mbs}[1]{ \boldsymbol{#1} }
 
 % -----------------------------------------------------
 % Math operators
@@ -15,6 +16,9 @@
 \newcommand{\func}[1]{\left(#1\right)}
 \newcommand{\ith}[1]{#1^{\scriptscriptstyle \textrm{th}}}
 \newcommand{\order}[1]{\mathcal{O}\func{#1}}
+\newcommand{\expected}[0]{\mathop{\mathbb{E}}}
+\newcommand{\covar}[0]{\mathop{\mathbb{Cov}}}
+\newcommand{\variance}[0]{\mathop{\mathbb{Var}}}
 
 % -----------------------------------------------------
 % Linear Algebra macros
