split with daal, and update lstlist for better spacing

--- a/util/listings-setup.tex
+++ b/util/listings-setup.tex
@@ -21,7 +21,9 @@
         breakatwhitespace=false,
         postbreak=\mbox{\textcolor{red}{$\hookrightarrow$}\space},
         morekeywords={std,cout,template,endl},
-        otherkeywords={std,cout,template,endl}
+        otherkeywords={std,cout,template,endl},
+        aboveskip=-10pt,
+        belowskip=-0pt
 }
 }
 \newcommand{\blist}{
